--- a/frontend/src/components/HabitTracker/Square.module.css
+++ b/frontend/src/components/HabitTracker/Square.module.css
@@ -2,5 +2,8 @@
     width: var(--grid-size);
     height: var(--grid-size);
     line-height: var(--grid-size);
+
+    font-family: 'IndieFlower', cursive;
+    font-weight: bold;
     text-align: center;
 }
