Fix habit performance observable

--- a/frontend/src/components/HabitTracker/PerformedSquare.module.css
+++ b/frontend/src/components/HabitTracker/PerformedSquare.module.css
@@ -9,7 +9,7 @@
     mask-size: cover;
 }
 
-.performed {
+.root.performed, .root:hover.performed {
     opacity: 1;
     mask-image: url(../../assets/images/performed.svg);
     mask-size: cover;
