--- a/frontend/src/components/shared/DottedGrid/DottedGrid.module.css
+++ b/frontend/src/components/shared/DottedGrid/DottedGrid.module.css
@@ -1,4 +1,4 @@
-:root {
+.root {
     --bg-color: #f5f5f5;
     --dot-color: #aaa;
 
@@ -7,10 +7,6 @@
 }
 
 .root {
-
-    height: 300px;
-    margin-left: 20px;
-
     background-color: var(--bg-color);
     background-image: radial-gradient(var(--dot-color) 5%, transparent 6%),
     radial-gradient(var(--dot-color) 5%, transparent 6%);
