Drag & Drop habit rows

--- a/frontend/src/components/HabitTracker/HabitRow.module.css
+++ b/frontend/src/components/HabitTracker/HabitRow.module.css
@@ -13,3 +13,12 @@
 .menu.open {
     display: block;
 }
+
+.draggable {
+    display: none;
+    cursor: move;
+}
+
+.header:hover .draggable {
+    display: block;
+}
