--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -2,8 +2,9 @@
 :root {
     --default-text-color: #222222;
     --default-highlight-color: #87a8d0;
+    --default-background-color: #87a8d0;
+    --bg-color: #f5f5f5;
 
-    --grid-size: 24px;
     --grid-size: 24px;
 }
 
